<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/settings_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="showCounterList"
        android:orientation="vertical">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_printer_heading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_printer_label_number" />

        <EditText
            android:id="@+id/settings_printer_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:numeric="integer"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_printer_label_name" />

        <EditText
            android:id="@+id/settings_printer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_printer_label_ip" />

        <EditText
            android:id="@+id/settings_printer_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_printer_label_port" />

        <EditText
            android:id="@+id/settings_printer_snmpport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:numeric="integer"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="161" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_printer_label_regexuri" />

        <EditText
            android:id="@+id/settings_printer_regexuri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="8080" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_printer_label_counters" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showCounterList"
            android:text="@string/settings_printer_editcounter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClickOk"
                android:text="OK" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClickDelete"
                android:text="@string/settings_printer_deleteprinter" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>