<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_counter_heading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_counter_label_name" />

        <EditText
            android:id="@+id/settings_counter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_counter_label_oid" />

        <EditText
            android:id="@+id/settings_counter_oid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_counter_label_regex" />

        <EditText
            android:id="@+id/settings_counter_regex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClickOk"
                android:text="OK" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClickDelete"
                android:text="@string/settings_counter_button_deleteCounter" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>