<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/wizard_half" android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_semi_description"
            android:id="@+id/textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_semi_counter_name"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wizard_semi_counter_name"
            android:lines="1"
            android:singleLine="true"
            android:scrollHorizontally="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_semi_counter_value"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wizard_semi_counter_value"
            android:lines="1"
            android:singleLine="true"
            android:numeric="integer"
            android:scrollHorizontally="true"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:id="@+id/okButton" android:layout_weight="2" android:onClick="onClickOk"/>

    </LinearLayout>
</LinearLayout>